[package]
name = "Escrow"
version = "0.1.0"
authors = ["ermz <eramirez4369@gmail.com>"]
edition = "2018"
license = "WFTPL"
publish = false

[feature]
exclude_entrypoint = []

[dependencies]
solana-program = "1.5.0"
thiserror = "1.0.21"
arrayref = "0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]
